内核态内存泄漏：增加了proc输出，增加了初始pages个数限制，删除了 mod信息，还差输入的时间参数。

--- a/mem_leak/kerspace/Makefile
+++ b/mem_leak/kerspace/Makefile
@@ -4,9 +4,9 @@
 obj-m += huawei_log_page.o
 #obj-m += print_log_page_all.o
 obj-m += huawei_log_page_test_1.o
-obj-m += huawei_log_page_test_2.o
-obj-m += huawei_log_page_test_3.o
-obj-m += huawei_log_page_test_4.o
+#obj-m += huawei_log_page_test_2.o
+#obj-m += huawei_log_page_test_3.o
+#obj-m += huawei_log_page_test_4.o
 
 #obj-m += huawei_user_space_mem.o
 #obj-m += huawei_user_space_mem_test.o
